--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ h6 {
 }
 
 .wrap {
-  max-width: 1440px;
+  
   margin: auto;
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
@@ -1787,6 +1787,7 @@ ul.timeline:before {
 
 li.timeline-item {
     margin: 20px 15px;
+    background-color:rgba(255,255,255,0.9) !important;
 }
 
 /* Timeline item arrow */
